--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,33 +1,23 @@
 {
-    "diagnostic.displayByAle": true,
-    "diagnostic.errorSign": "✖",
-    "diagnostic.warningSign": "⚠",
-    "diagnostic.infoSign": "ℹ",
-    "diagnostic.hintSign": "➤",
+    "diagnostic.errorSign": "",
+    "diagnostic.warningSign": "",
+    "diagnostic.infoSign": "",
+    "diagnostic.hintSign": "",
     "suggest.noselect": false,
     "suggest.echodocSupport": true,
     "codeLens.enable": true,
     "signature.enable": true,
     "suggest.preferCompleteThanJumpPlaceholder": true,
-    "python.venvFolders": ["~/.local/share/virtualenvs"],
-    "python.workspaceSymbols.exclusionPatterns": [],
-    "python.jediEnabled": false,
-    "python.linting.pylintEnabled": true,
-    "git.addedSign.text": "▎",
-    "git.changedSign.text": "▎",
-    "git.removedSign.text": "▎",
-    "git.changeRemovedSign.text": "▶",
-    "git.topRemovedSign.text": "◥",
-    "git.addedSign.hlGroup": "GitGutterAdd",
-    "git.changedSign.hlGroup": "GitGutterChange",
-    "git.removedSign.hlGroup": "GitGutterDelete",
-    "git.topRemovedSign.hlGroup": "GitGutterDelete",
-    "git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
+    
+    "python.formatting.autopep8Args": [
+        "--max-line-length=120",
+        "--ignore=E402"
+    ],
     "explorer.icon.enableNerdfont": true,
     "explorer.width": 40,
     "explorer.keyMappings": {
-       "<right>": "expand",
-       "<left>": "shrink"
+        "<right>": "expand",
+        "<left>": "shrink"
     },
-    "explorer.quitOnOpen": true 
+    "explorer.quitOnOpen": true
 }
