--- a/coc-settings.json
+++ b/coc-settings.json
@@ -49,6 +49,8 @@
         "--max-line-length=120",
         "--ignore=E402"
     ],
+    "yaml.format.enable":true,
+    "yaml.format.singleQuote": false,
     "explorer.previewAction.onHover": false,
     "explorer.icon.enableNerdfont": true,
     "explorer.width": 40,
